[tool.poetry]
name = "metmuseumartsearch_mc4938"
version = "0.1.0"
description = "This is a package that allows you to input a desired rangee of artworks collected in NY Met Museum and get information about each artwork in the range. Specifically, you can get information about the department an artwork is in, and the distribution of accession year of the range."
authors = ["MaisieChen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
